# so101_ws

./: .gitignore  README.md
src/so101_description/: CMakeLists.txt  README.md  package.xml
src/so101_description/urdf/: so101_new_calib.urdf
src/so101_hardware/: CMakeLists.txt  README.md  package.xml  so101_hardware.xml
src/so101_hardware/include/so101_hardware/: so101_system.hpp
src/so101_hardware/src/: so101_system.cpp
src/so101_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/so101_moveit/config/: calibration_default.json  follower_arm_calib.json  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  so101_new_calib.srdf
src/so101_moveit/launch/: demo.launch.py  demo_macos.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/so101_moveit/scripts/: keyboard_teleop.py
